# oro

./: .envrc  .gitignore  .gitmodules  .go-arch-lint.yml  .golangci.yml  .markdownlint.yml  CLAUDE.MD  Makefile  README.md  bcrCLAUDE.md  biome.json  cosmic-ray-full.toml  cosmic-ray.toml  coverage.out  go.mod  go.sum  install.md  oro-search-hook  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  quality_gate.sh  readme_test.go  test_git_hooks.sh  test_quality_gate.sh  thresholds.json
.beads/: config.yaml  issues.jsonl
.beads/formulas/: quality-gate.formula.toml  spec-decompose.formula.toml
.beads/memory/: knowledge.jsonl
.claude/: review-patterns.md  settings.json
.claude/commands/: clear-reprime.md  restart-oro.md
.claude/hooks/: architect_router.py  enforce-skills.sh  (+25 more)
.perles/: config.yaml  config.yaml.bak
ad_hoc/: audit_closed_beads.py  oro  oro-merge.sh  oro-worker.sh
archive/: 2026-02-07-agent-swarm-spec.md  2026-02-07-arch-review.md  2026-02-07-manager-redesign.md
assets/: .test-marker  CLAUDE.md
docs/: agent-output-6dq.md  agent-output-ef8.md  decisions&discoveries.md  decisions-and-discoveries.md
tests/: conftest.py  test_architect_router.py  test_architect_router_new.py  test_context_pct_writer.py  test_inject_context_usage.py  test_learning_reminder.py  test_memory_capture.py  test_notify_manager_on_bead_create.py  test_pane_handoff_reminder.py  test_post_commit_reminder.py  test_prompt_injection_guard.py  test_rebase_worktree_guard.py  test_session_start_extras.py  test_validate_agent_completion.py  test_worktree_guard.py
(+483 files in other folders)
