[project]
name = "oro"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["references", "yap", "archive"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]
ignore = ["SIM115"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
extraPaths = ["assets/hooks"]
exclude = ["references", "yap", "archive", ".worktrees", ".venv", "tests/conftest.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_oro_home: tests that require ~/.oro/ directory structure"
]
